# TextRPG

./: .gitignore  README.md
data/entities/: tree.json
data/entities/creatures/: BBEG.json
data/scenes/: introduction.json
src/: CMakeLists.txt  command_parser.cpp  creature.cpp  creature.hpp  creature_reader.hpp  data_reader.hpp  destroyable.cpp  entity.cpp  entity.hpp  entity_reader.hpp  game.cpp  game.hpp  main.cpp  map.hpp  point.hpp  scene.cpp  scene.hpp  scene_reader.cpp  scene_reader.hpp
src/cmake/: FindJsonCpp.cmake
src/io/: CMakeLists.txt  command_parser.cpp  command_parser.hpp  creature_reader.cpp  creature_reader.hpp  data_reader.cpp  entity_reader.cpp  entity_reader.hpp  scene_reader.hpp
src/logic/: CMakeLists.txt  creature.cpp  creature.hpp  destroyable.cpp  destroyable.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  map.hpp  scene.cpp  scene.hpp  skill.hpp
